# NeuralPull-Pytorch

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  batch_deal.cmd  cmake_install.cmake  metric.ipynb  mlsresample.cpp  output-mls.ply  resample.ipynb  resampling  run.py
confs/: npull.conf
data/: gargoyle_downsampled.ply  gargoyle_noisy.ply  noisy_0.3.ply  noisy_0.4.ply  noisy_0.5.ply
models/: fields.py
outs/Armadillo/checkpoints/: ckpt_005000.pth  ckpt_010000.pth  ckpt_015000.pth  ckpt_020000.pth  ckpt_025000.pth  ckpt_030000.pth  ckpt_035000.pth  ckpt_040000.pth  ckpt_045000.pth  ckpt_050000.pth  ckpt_055000.pth  ckpt_060000.pth  ckpt_065000.pth  ckpt_070000.pth
outs/Armadillo/outputs/: 00005000_0.0.ply
outs/Armadillo/recording/: run.py
outs/Armadillo/recording/models/: dataset.py
outs/gargoyle/checkpoints/: ckpt_005000.pth  ckpt_010000.pth  ckpt_015000.pth  ckpt_020000.pth  ckpt_025000.pth  ckpt_030000.pth  ckpt_035000.pth
outs/gargoyle/recording/: run.py
outs/noisy_0.4/checkpoints/: ckpt_005000.pth  ckpt_010000.pth  ckpt_015000.pth  ckpt_020000.pth  ckpt_025000.pth  ckpt_030000.pth  ckpt_035000.pth
outs/noisy_0.4/recording/: run.py
outs/noisy_0.5/checkpoints/: ckpt_005000.pth  ckpt_010000.pth  ckpt_015000.pth  ckpt_020000.pth  ckpt_025000.pth  ckpt_030000.pth  ckpt_035000.pth
outs/noisy_0.5/recording/: run.py
outs/sparse/outputs/: 00025000_0.0.ply
outs/test/checkpoints/: ckpt_005000.pth  ckpt_010000.pth  ckpt_015000.pth  ckpt_020000.pth  ckpt_025000.pth  ckpt_030000.pth  ckpt_035000.pth  ckpt_040000.pth
(+2 files in other folders)
